# xpcf-ffy

./: .gitignore  meson.build  meson_build.sh
src/: Exception.cpp
subprojects/: grpc.wrap
test/: xpcf_dynamic_test.cpp
